# consuma_ai

./: README.md
Backend/: .env  .gitignore  README.md  alembic.ini  async_report.txt  docker-compose.yml  pyproject.toml  sync_report.txt
Backend/alembic/: env.py
Backend/alembic/versions/: 00af9ee17791_create_requests_table.py
Backend/app/: main.py
Backend/app/api/health/: routes.py
Backend/app/api/processing/: handlers.py  routes.py  schemas.py
Backend/app/api/requests/: handlers.py  routes.py  schema.py
Backend/app/config/: settings.py
Backend/app/domain/: work_service.py
Backend/app/infra/db/: base.py  dependencies.py  models.py  session.py
Backend/app/infra/workers/: background_worker.py  callback.py  callback_scheduler.py  scheduler.py
Backend/app/lifecycle/: lifespan.py
Backend/app/middlewares/: cors_middleware.py
Backend/app/repositories/: request_repository.py
Backend/app/scripts/: load_generator.py
Backend/app/utils/: utils.py
Frontend/consuma_ui/: README.md  package-lock.json  package.json
Frontend/consuma_ui/src/: App.css  App.js  index.js  utils.js
Frontend/consuma_ui/src/components/: Container.js  Table.js
Frontend/consuma_ui/src/context/: AppContext.js
Frontend/consuma_ui/src/hooks/: useBasicData.js  useContextApp.js
Frontend/consuma_ui/src/layouts/: Applayout.js
Frontend/consuma_ui/src/pages/: Main.js
